--- a/OnMyWay/res/values/strings.xml
+++ b/OnMyWay/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">1425981431031732</string>
     <string name="title_activity_list">ListActivity</string>
+    <string name="menu_list_add">Add Friends</string>
+    <string name="menu_list_invite">Invite Friends</string>
+    <string name="dialog_fragment_button">Add</string>
+    <string name="menu_list_logout">Logout</string>
+    <string name="add_friends_dialog_fragment_title">Select Friends To Add</string>
 
 </resources>
